[package]
name = "pokedex"
version = "0.1.0"
authors = ["Alexis Lozano <alexis.pascal.lozano@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.2.1"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
